<resources>
    <string name="app_name">Your Pet Shop</string>
    <string name="contacto">Contacto</string>
    <string name="estrella">estrella</string>
    <string name="tv_cantidad">cantidad</string>
    <string name="acercade">Acerca de</string>

    <string name="Bnext">CONTINUAR</string>
    <string name="TNombre">Nombre Completo: </string>
    <string name="TTelefono">Numero de Telefono: </string>
    <string name="TEmail">Email: </string>
    <string name="TDetalles">Detalles: </string>
    <string name="BtBorrar">Borrar todo</string>
    <string name="textodetalles">Confirmacion de Datos</string>
    <string name="btatras">ATRAS</string>
    <string name="tvtitulobio">Acerca del desarrollador</string>
    <string name="btenviarcoment">Enviar Comentario</string>
    <string name="perfildemascota">Perfil</string>
    <string name="contactoemail">Contactanos</string>
    <string name="nombremascota">Danna</string>
    <string name="animalesfavoritos">Mascotas Favoritas</string>
    <string name="perfilmascota">Ver Perfil de Mascota</string>
    <string name="developerbio">Hola leector mi nombre es Jose Antonio Rios, soy el desarrollador de esta fabulosa app.
                                Si tienes alguna inquietud puedes escribirme al correo riolj20156@gmail.com y te respondere a la brevedad posible
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
