<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.riosgame.yourpetshop.DeveloperBio">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mytoolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        android:label="@string/app_name"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvtitulobio"
            android:textAlignment="center"
            android:textColor="@color/colorblanco"
            android:textSize="24sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutbio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mytoolbar"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mytoolbar">


        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorverdeamarillo"
            android:paddingLeft="8dp"
            android:text="@string/developerbio"
            android:textColor="@color/colornegro"
            android:textSize="@dimen/textSize"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btatras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btatras"
            android:textSize="@dimen/textbotonsize"
            android:textStyle="bold"
            android:theme="@style/risedbutton"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
